# RivalCfgGuiGTK

./: .gitignore  CHANGELOG.md  COSMIC_COMPATIBILITY.md  Cargo.toml  PKGBUILD  README.md  build-and-prep.sh  io.github.chadapsheridan.rivalcfgtray.appdata.xml  rivalcfg-tray.desktop  rivalcfg-tray.flatpak.yaml  rivalcfg-tray.service
.github/instructions/: copilot-instructions.md
.github/workflows/: config.conf  package-and-release.yaml
scripts/: cosmic-tray-diagnostics.sh  dryrun-packaging.sh
src/: cmd.rs  main.rs  tests.rs
