[package]
name = "rivalcfg-tray"
version = "0.9.3"
edition = "2024"

[dependencies]
glib = "0.18"
gio = "0.18"
anyhow = "1.0"
appindicator3 = "0.3"
gdk-pixbuf = "0.18"
gtk = "0.18"
tempfile = "3.21.0"

# System dependency required for SVG to PNG conversion at runtime:
#   rsvg-convert (usually provided by the librsvg2-bin package)
